--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,7 @@
     "collapsed": true
    },
    "source": [
-    "This **is** a mpython cell without valid Python so we will see an error"
+    "This **is python cell without valid Python so we will see an error"
    ]
   },
   {
